fix toggle overlap on mobile view

--- a/assets/scss/_navigation.scss
+++ b/assets/scss/_navigation.scss
@@ -86,14 +86,17 @@
     }
   }
 
+  // Remove the fixed positioning from dark-mode-toggle when inline
   #dark-mode-toggle {
-    margin: 1.7rem 0;
-    font-size: 2.4rem;
-    line-height: inherit;
-    bottom: 2rem;
-    left: 2rem;
-    z-index: 100;
-    position: fixed;
+    &.inline {
+      margin: 0;
+      font-size: inherit;
+      line-height: inherit;
+      bottom: auto;
+      left: auto;
+      z-index: auto;
+      position: static;
+    }
   }
 
   #menu-toggle {
